--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vuepress dev ./docs",
     "build": "vuepress build ./docs",
-    "deploy": "sh build/deploy.sh"
+    "deploy": "sh deploy.sh"
   },
   "license": "MIT",
   "devDependencies": {
